src/test/ui/pattern/issue-71042-opaquely-typed-constant-used-in-pattern.stderr
error: `impl Copy` cannot be used in patterns
  --> $DIR/issue-71042-opaquely-typed-constant-used-in-pattern.rs:7:9
   |
LL |         C |
   |         ^

error: aborting due to previous error

